--- a/.docker/local/apache/apache.conf
+++ b/.docker/local/apache/apache.conf
@@ -157,6 +157,15 @@ IncludeOptional mods-enabled/*.conf
 
 # Include list of ports to listen on
 #Include ports.conf
+Listen 5000
+
+<IfModule ssl_module>
+        Listen 443
+</IfModule>
+
+<IfModule mod_gnutls.c>
+        Listen 443
+</IfModule>
 
 
 # Sets the default security model of the Apache2 HTTPD server. It does
@@ -165,7 +174,6 @@ IncludeOptional mods-enabled/*.conf
 # the latter may be used for local directories served by the web server. If
 # your system is serving content from a sub-directory in /srv you must allow
 # access here, or in any related virtual host.
-Listen 5000
 # <Directory />
 #         Options FollowSymLinks
 #         AllowOverride None
